# codeql-extractor-lua

./: .gitignore  CONTRIBUTING.md  README.md  codeql-extractor.yml
extractor/: Cargo.toml
extractor/src/: autobuilder.rs  extractor.rs  generator.rs
ql/lib/: lua.dbscheme
ql/lib/codeql/lua/ast/internal/: TreeSitter.qll
ql/test/library-tests/ast/basic/: app.lua
scripts/: create-extractor-pack.sh  scan.sh  tests.sh
tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  pre-finalize.sh  qltest.cmd  qltest.sh
